--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-agency.git"
     },
     "dependencies": {
-        "bootstrap": "5.0.2"
+        "bootstrap": "5.0.2",
+        "bootstrap-css": "^4.0.0-alpha.5"
     },
     "devDependencies": {
         "autoprefixer": "10.2.6",
