--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     },
     "dependencies": {
         "bootstrap": "5.0.2",
-        "bootstrap-css": "^4.0.0-alpha.5"
+        "bootstrap-css": "^4.0.0-alpha.5",
+        "gh-pages": "^3.2.3"
     },
     "devDependencies": {
         "autoprefixer": "10.2.6",
